# yastyleguide

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  Untitled.ipynb  flake_plugins.md  pyproject.toml  setup.cfg  whitelist.txt
docs/: bad_pracices.md  flake_plugins.md  manifest.md  plugin_list.md
docs/eng/: plugin_list.md
styles/: nitpick-yastyle.toml  pre-commit.toml  yastyleguide.toml
tests/: test_complexity_visitor.py  test_loop_visitor.py  test_node_name.py  test_stop_node.py  test_use_node.py  test_yastyleguide.py
yastyleguide/: options.py  plugin.py  types.py
yastyleguide/checkers/: __init__.py  base.py  complexity_line.py  complexity_module.py  loop.py
yastyleguide/visitors/: __init__.py  complexity.py  loop.py
yastyleguide/visitors/complexity/: __init__.py  node_name.py  stop_node.py  use_node.py  visitor.py
